--- a/weather.html
+++ b/weather.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <script type="text/javascript" src="index_jscript.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" type="text/css" href="index_stylesheet.css">
     <meta charset="UTF-8">
     <title>b-esc: wokstar★</title>
@@ -20,11 +21,64 @@
     <a href="weather.html">weather</a>
     <a href="stocks.html">stocks</a>
 </div>
-
 <span style="font-size:45px;cursor:pointer" onclick="open_menu()">★</span>
 
+<!-- Div's to show all Tiles -->
+<div class="row">
+    <div class="tile">
+        <h1>Stock 1</h1>
+        <p> High</p>
+        <p> Low </p>
+        <p> Low </p>
+        <p> Low </p>
+        <p> Low </p>
+    </div>
+    <div class="tile">
+        <h1>Stock 2</h1>
+        <p> High</p>
+        <p> Low </p>
+        <p> Low </p>
+        <p> Low </p>
+        <p> Low </p>
 
+    </div>
+    <div class="tile">
+        <h1>Stock 3</h1>
+        <p> High</p>
+        <p> Low </p>
+        <p> Low </p>
+        <p> Low </p>
+        <p> Low </p>
 
+    </div>
+
+    <div class="tile">
+        <h1>Stock 4</h1>
+        <p> High</p>
+        <p> Low </p>
+        <p> Low </p>
+        <p> Low </p>
+        <p> Low </p>
+    </div>
+    <div class="tile">
+        <h1>Stock 5</h1>
+        <p> High</p>
+        <p> Low </p>
+        <p> Low </p>
+        <p> Low </p>
+        <p> Low </p>
+
+    </div>
+    <div class="tile">
+        <h1>Stock 6</h1>
+        <p> High</p>
+        <p> Low </p>
+        <p> Low </p>
+        <p> Low </p>
+        <p> Low </p>
+
+    </div>
+</div>
 
 
 </body>
