--- a/weather.html
+++ b/weather.html
@@ -26,7 +26,7 @@
 <!-- Div's to show all Tiles -->
 <div class="row">
     <div class="tile">
-        <h1>Stock 1</h1>
+        <h1>Weather 1</h1>
         <p> High</p>
         <p> Low </p>
         <p> Low </p>
@@ -34,34 +34,7 @@
         <p> Low </p>
     </div>
     <div class="tile">
-        <h1>Stock 2</h1>
-        <p> High</p>
-        <p> Low </p>
-        <p> Low </p>
-        <p> Low </p>
-        <p> Low </p>
-
-    </div>
-    <div class="tile">
-        <h1>Stock 3</h1>
-        <p> High</p>
-        <p> Low </p>
-        <p> Low </p>
-        <p> Low </p>
-        <p> Low </p>
-
-    </div>
-
-    <div class="tile">
-        <h1>Stock 4</h1>
-        <p> High</p>
-        <p> Low </p>
-        <p> Low </p>
-        <p> Low </p>
-        <p> Low </p>
-    </div>
-    <div class="tile">
-        <h1>Stock 5</h1>
+        <h1>Weather 2</h1>
         <p> High</p>
         <p> Low </p>
         <p> Low </p>
@@ -70,7 +43,34 @@
 
     </div>
     <div class="tile">
-        <h1>Stock 6</h1>
+        <h1>Weather 3</h1>
+        <p> High</p>
+        <p> Low </p>
+        <p> Low </p>
+        <p> Low </p>
+        <p> Low </p>
+
+    </div>
+
+    <div class="tile">
+        <h1>Weather 4</h1>
+        <p> High</p>
+        <p> Low </p>
+        <p> Low </p>
+        <p> Low </p>
+        <p> Low </p>
+    </div>
+    <div class="tile">
+        <h1>Weather 5</h1>
+        <p> High</p>
+        <p> Low </p>
+        <p> Low </p>
+        <p> Low </p>
+        <p> Low </p>
+
+    </div>
+    <div class="tile">
+        <h1>Weather 6</h1>
         <p> High</p>
         <p> Low </p>
         <p> Low </p>
