--- a/weather.html
+++ b/weather.html
@@ -2,13 +2,14 @@
 <html>
 <head>
     <script type="text/javascript" src="index_jscript.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" type="text/css" href="index_stylesheet.css">
     <meta charset="UTF-8">
     <title>b-esc: wokstar★</title>
     <style>
     </style>
 </head>
-<body onload="loading_page()" style="background-color: #f1eee9">
+<body onload="loading_page_non_home()" style="background-color: #f1eee9">
 <div id="loading_overlay">
     <div id="loading_bar"></div>
 </div>
@@ -20,9 +21,64 @@
     <a href="weather.html">weather</a>
     <a href="stocks.html">stocks</a>
 </div>
-
 <span style="font-size:45px;cursor:pointer" onclick="open_menu()">★</span>
 
+<!-- Div's to show all Tiles -->
+<div class="row" id="fade_flex">
+    <div class="tile">
+        <h1>Stock 1</h1>
+        <p> High</p>
+        <p> Low </p>
+        <p> Low </p>
+        <p> Low </p>
+        <p> Low </p>
+    </div>
+    <div class="tile">
+        <h1>Stock 2</h1>
+        <p> High</p>
+        <p> Low </p>
+        <p> Low </p>
+        <p> Low </p>
+        <p> Low </p>
+
+    </div>
+    <div class="tile">
+        <h1>Stock 3</h1>
+        <p> High</p>
+        <p> Low </p>
+        <p> Low </p>
+        <p> Low </p>
+        <p> Low </p>
+
+    </div>
+
+    <div class="tile">
+        <h1>Stock 4</h1>
+        <p> High</p>
+        <p> Low </p>
+        <p> Low </p>
+        <p> Low </p>
+        <p> Low </p>
+    </div>
+    <div class="tile">
+        <h1>Stock 5</h1>
+        <p> High</p>
+        <p> Low </p>
+        <p> Low </p>
+        <p> Low </p>
+        <p> Low </p>
+
+    </div>
+    <div class="tile">
+        <h1>Stock 6</h1>
+        <p> High</p>
+        <p> Low </p>
+        <p> Low </p>
+        <p> Low </p>
+        <p> Low </p>
+
+    </div>
+</div>
 
 
 
