lol i tried to cross site script

--- a/stocks.html
+++ b/stocks.html
@@ -25,9 +25,10 @@
 
 <!-- Div's to show all Tiles -->
 <div class="row" id="fade_flex" >
-    <div class="tile"  onclick="open_settings()">
-        <iframe style="display: none" id="frame" src="settings.html" frameborder="0"></iframe>
-        <div id="queue_vanish">
+    <div class="tile">
+        <div style="display: none" onclick="close_settings(0)" class="exit_button">x</div>
+        <iframe style="display: none" class="frame" src="settings.html" frameborder="0"></iframe>
+        <div class="queue_vanish" onclick="open_settings(0)">
             <h1 >Stock 1</h1>
             <p> High</p>
             <p> Low </p>
@@ -36,51 +37,72 @@
             <p> Low </p>
         </div>
     </div>
-    <div class="tile">
-        <h1>Stock 2</h1>
-        <p> High</p>
-        <p> Low </p>
-        <p> Low </p>
-        <p> Low </p>
-        <p> Low </p>
 
-    </div>
     <div class="tile">
-        <h1>Stock 3</h1>
-        <p> High</p>
-        <p> Low </p>
-        <p> Low </p>
-        <p> Low </p>
-        <p> Low </p>
-
+        <div style="display: none" onclick="close_settings(1)" class="exit_button">x</div>
+        <iframe style="display: none" class="frame" src="settings.html" frameborder="0"></iframe>
+        <div class="queue_vanish" onclick="open_settings(1)">
+            <h1 >Stock 1</h1>
+            <p> High</p>
+            <p> Low </p>
+            <p> Low </p>
+            <p> Low </p>
+            <p> Low </p>
+        </div>
     </div>
 
     <div class="tile">
-        <h1>Stock 4</h1>
-        <p> High</p>
-        <p> Low </p>
-        <p> Low </p>
-        <p> Low </p>
-        <p> Low </p>
+        <div style="display: none" onclick="close_settings(2)" class="exit_button">x</div>
+        <iframe style="display: none" class="frame" src="settings.html" frameborder="0"></iframe>
+        <div class="queue_vanish" onclick="open_settings(2)">
+            <h1 >Stock 1</h1>
+            <p> High</p>
+            <p> Low </p>
+            <p> Low </p>
+            <p> Low </p>
+            <p> Low </p>
+        </div>
     </div>
-    <div class="tile">
-        <h1>Stock 5</h1>
-        <p> High</p>
-        <p> Low </p>
-        <p> Low </p>
-        <p> Low </p>
-        <p> Low </p>
 
-    </div>
     <div class="tile">
-        <h1>Stock 6</h1>
-        <p> High</p>
-        <p> Low </p>
-        <p> Low </p>
-        <p> Low </p>
-        <p> Low </p>
-
+        <div style="display: none" onclick="close_settings(3)" class="exit_button">x</div>
+        <iframe style="display: none" class="frame" src="settings.html" frameborder="0"></iframe>
+        <div class="queue_vanish" onclick="open_settings(3)">
+            <h1 >Stock 1</h1>
+            <p> High</p>
+            <p> Low </p>
+            <p> Low </p>
+            <p> Low </p>
+            <p> Low </p>
+        </div>
     </div>
+
+    <div class="tile">
+        <div style="display: none" onclick="close_settings(4)" class="exit_button">x</div>
+        <iframe style="display: none" class="frame" src="settings.html" frameborder="0"></iframe>
+        <div class="queue_vanish" onclick="open_settings(4)">
+            <h1 >Stock 1</h1>
+            <p> High</p>
+            <p> Low </p>
+            <p> Low </p>
+            <p> Low </p>
+            <p> Low </p>
+        </div>
+    </div>
+
+    <div class="tile">
+        <div style="display: none" onclick="close_settings(5)" class="exit_button">x</div>
+        <iframe style="display: none" class="frame" src="settings.html" frameborder="0"></iframe>
+        <div class="queue_vanish" onclick="open_settings(5)">
+            <h1 >Stock 1</h1>
+            <p> High</p>
+            <p> Low </p>
+            <p> Low </p>
+            <p> Low </p>
+            <p> Low </p>
+        </div>
+    </div>
+
 </div>
 
 
