--- a/settings.html
+++ b/settings.html
@@ -7,7 +7,137 @@
 </head>
 
 <body>
-<div class="blog_element">LIL HOS SICC</div>
+
+<div class="settings_option">
+    Settings
+    <form action="/apply_settings.php" method="post">
+        <input type="text" name="entry?">
+        </input>
+    </form>
+</div>
+
+<div class="settings_option">
+    Settings
+    <form action="/apply_settings.php" method="post">
+        <input type="text" name="entry?">
+        </input>
+    </form>
+</div>
+
+<div class="settings_option">
+    Settings
+    <form action="/apply_settings.php" method="post">
+        <input type="text" name="entry?">
+        </input>
+    </form>
+</div>
+
+<div class="settings_option">
+    Settings
+    <form action="/apply_settings.php" method="post">
+        <input type="text" name="entry?">
+        </input>
+    </form>
+</div>
+<div class="settings_option">
+    Settings
+    <form action="/apply_settings.php" method="post">
+        <input type="text" name="entry?">
+        </input>
+    </form>
+</div>
+<div class="settings_option">
+    Settings
+    <form action="/apply_settings.php" method="post">
+        <input type="text" name="entry?">
+        </input>
+    </form>
+</div>
+
+
+<div class="settings_option">
+    Settings
+    <form action="/apply_settings.php" method="post">
+        <input type="text" name="entry?">
+        </input>
+    </form>
+</div>
+<div class="settings_option">
+    Settings
+    <form action="/apply_settings.php" method="post">
+        <input type="text" name="entry?">
+        </input>
+    </form>
+</div>
+<div class="settings_option">
+    Settings
+    <form action="/apply_settings.php" method="post">
+        <input type="text" name="entry?">
+        </input>
+    </form>
+    <div class="settings_option">
+        Settings
+        <form action="/apply_settings.php" method="post">
+            <input type="text" name="entry?">
+            </input>
+        </form>
+    </div><div class="settings_option">LIL HOS SICC</div>
+    <div class="settings_option">
+        Settings
+        <form action="/apply_settings.php" method="post">
+            <input type="text" name="entry?">
+            </input>
+        </form>
+    </div>
+
+
+    <div class="settings_option">
+        Settings
+        <form action="/apply_settings.php" method="post">
+            <input type="text" name="entry?">
+            </input>
+        </form>
+    </div>
+    <div class="settings_option">
+        Settings
+        <form action="/apply_settings.php" method="post">
+            <input type="text" name="entry?">
+            </input>
+        </form>
+    </div>
+
+
+    <div class="settings_option">
+        Settings
+        <form action="/apply_settings.php" method="post">
+            <input type="text" name="entry?">
+            </input>
+        </form>
+    </div>
+    <div class="settings_option">
+        Settings
+        <form action="/apply_settings.php" method="post">
+            <input type="text" name="entry?">
+            </input>
+        </form>
+    </div>
+    <div class="settings_option">
+        Settings
+        <form action="/apply_settings.php" method="post">
+            <input type="text" name="entry?">
+            </input>
+        </form>
+    </div>
+    <div class="settings_option">
+        Settings
+        <form action="/apply_settings.php" method="post">
+            <input type="text" name="entry?">
+            </input>
+        </form>
+    </div>
+
+
+
 </body>
 
 </html>
