enabled settings menu cross site scripting hacc

--- a/settings.html
+++ b/settings.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script type="text/javascript" src="index_jscript.js"></script>
     <meta charset="UTF-8">
     <title>b-esc: wokstar★</title>
     <link rel="stylesheet" type="text/css" href="index_stylesheet.css">
 </head>
 
-<body>
+<body onload="getParameterByName('property')">
 
 <div class="settings_option">
-    Settings
+    stocks1
     <form action="/apply_settings.php" method="post">
         <input type="text" name="entry?">
         </input>
@@ -17,7 +18,7 @@
 </div>
 
 <div class="settings_option">
-    Settings
+    stocks2
     <form action="/apply_settings.php" method="post">
         <input type="text" name="entry?">
         </input>
@@ -25,7 +26,7 @@
 </div>
 
 <div class="settings_option">
-    Settings
+    stocks3
     <form action="/apply_settings.php" method="post">
         <input type="text" name="entry?">
         </input>
@@ -33,21 +34,21 @@
 </div>
 
 <div class="settings_option">
-    Settings
+    stocks4
     <form action="/apply_settings.php" method="post">
         <input type="text" name="entry?">
         </input>
     </form>
 </div>
 <div class="settings_option">
-    Settings
+    stocks5
     <form action="/apply_settings.php" method="post">
         <input type="text" name="entry?">
         </input>
     </form>
 </div>
 <div class="settings_option">
-    Settings
+    stocks6
     <form action="/apply_settings.php" method="post">
         <input type="text" name="entry?">
         </input>
@@ -55,86 +56,52 @@
 </div>
 
 
+
 <div class="settings_option">
-    Settings
+    weather1
+    <form action="/apply_settings.php" method="post">
+        <input type="text" name="entry?">
+        </input>
+    </form>
+</div>
+
+<div class="settings_option">
+    weather2
+    <form action="/apply_settings.php" method="post">
+        <input type="text" name="entry?">
+        </input>
+    </form>
+</div>
+
+<div class="settings_option">
+    weather3
+    <form action="/apply_settings.php" method="post">
+        <input type="text" name="entry?">
+        </input>
+    </form>
+</div>
+
+<div class="settings_option">
+    weather4
     <form action="/apply_settings.php" method="post">
         <input type="text" name="entry?">
         </input>
     </form>
 </div>
 <div class="settings_option">
-    Settings
+    weather5
     <form action="/apply_settings.php" method="post">
         <input type="text" name="entry?">
         </input>
     </form>
 </div>
 <div class="settings_option">
-    Settings
+    weather6
     <form action="/apply_settings.php" method="post">
         <input type="text" name="entry?">
         </input>
     </form>
-    <div class="settings_option">
-        Settings
-        <form action="/apply_settings.php" method="post">
-            <input type="text" name="entry?">
-            </input>
-        </form>
-    </div><div class="settings_option">LIL HOS SICC</div>
-    <div class="settings_option">
-        Settings
-        <form action="/apply_settings.php" method="post">
-            <input type="text" name="entry?">
-            </input>
-        </form>
-    </div>
-
-
-    <div class="settings_option">
-        Settings
-        <form action="/apply_settings.php" method="post">
-            <input type="text" name="entry?">
-            </input>
-        </form>
-    </div>
-    <div class="settings_option">
-        Settings
-        <form action="/apply_settings.php" method="post">
-            <input type="text" name="entry?">
-            </input>
-        </form>
-    </div>
-
-
-    <div class="settings_option">
-        Settings
-        <form action="/apply_settings.php" method="post">
-            <input type="text" name="entry?">
-            </input>
-        </form>
-    </div>
-    <div class="settings_option">
-        Settings
-        <form action="/apply_settings.php" method="post">
-            <input type="text" name="entry?">
-            </input>
-        </form>
-    </div>
-    <div class="settings_option">
-        Settings
-        <form action="/apply_settings.php" method="post">
-            <input type="text" name="entry?">
-            </input>
-        </form>
-    </div>
-    <div class="settings_option">
-        Settings
-        <form action="/apply_settings.php" method="post">
-            <input type="text" name="entry?">
-            </input>
-        </form>
-    </div>
+</div>
 
 
 
