--- a/weather.html
+++ b/weather.html
@@ -24,60 +24,85 @@
 <span style="font-size:45px;cursor:pointer" onclick="open_menu()">★</span>
 
 <!-- Div's to show all Tiles -->
-<div class="row" id="fade_flex">
+<div class="row" id="fade_flex" >
     <div class="tile">
-        <h1>Stock 1</h1>
-        <p> High</p>
-        <p> Low </p>
-        <p> Low </p>
-        <p> Low </p>
-        <p> Low </p>
-    </div>
-    <div class="tile">
-        <h1>Stock 2</h1>
-        <p> High</p>
-        <p> Low </p>
-        <p> Low </p>
-        <p> Low </p>
-        <p> Low </p>
-
-    </div>
-    <div class="tile">
-        <h1>Stock 3</h1>
-        <p> High</p>
-        <p> Low </p>
-        <p> Low </p>
-        <p> Low </p>
-        <p> Low </p>
-
+        <div style="display: none" onclick="close_settings(0)" class="exit_button">x</div>
+        <iframe style="display: none" class="frame"  frameborder="0"></iframe>
+        <div class="queue_vanish" onclick="open_settings(0,'settings.html?property=weather1')">
+            <h1 >Stock 1</h1>
+            <p> High</p>
+            <p> Low </p>
+            <p> Low </p>
+            <p> Low </p>
+            <p> Low </p>
+        </div>
     </div>
 
     <div class="tile">
-        <h1>Stock 4</h1>
-        <p> High</p>
-        <p> Low </p>
-        <p> Low </p>
-        <p> Low </p>
-        <p> Low </p>
+        <div style="display: none" onclick="close_settings(1)" class="exit_button">x</div>
+        <iframe style="display: none" class="frame" frameborder="0"></iframe>
+        <div class="queue_vanish" onclick="open_settings(1,'settings.html?property=weather2')">
+            <h1 >Stock 1</h1>
+            <p> High</p>
+            <p> Low </p>
+            <p> Low </p>
+            <p> Low </p>
+            <p> Low </p>
+        </div>
     </div>
-    <div class="tile">
-        <h1>Stock 5</h1>
-        <p> High</p>
-        <p> Low </p>
-        <p> Low </p>
-        <p> Low </p>
-        <p> Low </p>
 
-    </div>
     <div class="tile">
-        <h1>Stock 6</h1>
-        <p> High</p>
-        <p> Low </p>
-        <p> Low </p>
-        <p> Low </p>
-        <p> Low </p>
-
+        <div style="display: none" onclick="close_settings(2)" class="exit_button">x</div>
+        <iframe style="display: none" class="frame" frameborder="0"></iframe>
+        <div class="queue_vanish" onclick="open_settings(2,'settings.html?property=weather3')">
+            <h1 >Stock 1</h1>
+            <p> High</p>
+            <p> Low </p>
+            <p> Low </p>
+            <p> Low </p>
+            <p> Low </p>
+        </div>
     </div>
+
+    <div class="tile">
+        <div style="display: none" onclick="close_settings(3)" class="exit_button">x</div>
+        <iframe style="display: none" class="frame"  frameborder="0"></iframe>
+        <div class="queue_vanish" onclick="open_settings(3,'settings.html?property=weather4')">
+            <h1 >Stock 1</h1>
+            <p> High</p>
+            <p> Low </p>
+            <p> Low </p>
+            <p> Low </p>
+            <p> Low </p>
+        </div>
+    </div>
+
+    <div class="tile">
+        <div style="display: none" onclick="close_settings(4)" class="exit_button">x</div>
+        <iframe style="display: none" class="frame"  frameborder="0"></iframe>
+        <div class="queue_vanish" onclick="open_settings(4,'settings.html?property=weather5')">
+            <h1 >Stock 1</h1>
+            <p> High</p>
+            <p> Low </p>
+            <p> Low </p>
+            <p> Low </p>
+            <p> Low </p>
+        </div>
+    </div>
+
+    <div class="tile">
+        <div style="display: none" onclick="close_settings(5)" class="exit_button">x</div>
+        <iframe style="display: none" class="frame" frameborder="0"></iframe>
+        <div class="queue_vanish" onclick="open_settings(5,'settings.html?property=weather6')">
+            <h1 >Stock 1</h1>
+            <p> High</p>
+            <p> Low </p>
+            <p> Low </p>
+            <p> Low </p>
+            <p> Low </p>
+        </div>
+    </div>
+
 </div>
 
 
