--- a/stocks.html
+++ b/stocks.html
@@ -27,8 +27,8 @@
 <div class="row" id="fade_flex" >
     <div class="tile">
         <div style="display: none" onclick="close_settings(0)" class="exit_button">x</div>
-        <iframe style="display: none" class="frame" src="settings.html" frameborder="0"></iframe>
-        <div class="queue_vanish" onclick="open_settings(0)">
+        <iframe style="display: none" class="frame"  frameborder="0"></iframe>
+        <div class="queue_vanish" onclick="open_settings(0,'settings.html?property=stocks1')">
             <h1 >Stock 1</h1>
             <p> High</p>
             <p> Low </p>
@@ -40,8 +40,8 @@
 
     <div class="tile">
         <div style="display: none" onclick="close_settings(1)" class="exit_button">x</div>
-        <iframe style="display: none" class="frame" src="settings.html" frameborder="0"></iframe>
-        <div class="queue_vanish" onclick="open_settings(1)">
+        <iframe style="display: none" class="frame" frameborder="0"></iframe>
+        <div class="queue_vanish" onclick="open_settings(1,'settings.html?property=stocks2')">
             <h1 >Stock 1</h1>
             <p> High</p>
             <p> Low </p>
@@ -53,8 +53,8 @@
 
     <div class="tile">
         <div style="display: none" onclick="close_settings(2)" class="exit_button">x</div>
-        <iframe style="display: none" class="frame" src="settings.html" frameborder="0"></iframe>
-        <div class="queue_vanish" onclick="open_settings(2)">
+        <iframe style="display: none" class="frame" frameborder="0"></iframe>
+        <div class="queue_vanish" onclick="open_settings(2,'settings.html?property=stocks3')">
             <h1 >Stock 1</h1>
             <p> High</p>
             <p> Low </p>
@@ -66,8 +66,8 @@
 
     <div class="tile">
         <div style="display: none" onclick="close_settings(3)" class="exit_button">x</div>
-        <iframe style="display: none" class="frame" src="settings.html" frameborder="0"></iframe>
-        <div class="queue_vanish" onclick="open_settings(3)">
+        <iframe style="display: none" class="frame"  frameborder="0"></iframe>
+        <div class="queue_vanish" onclick="open_settings(3,'settings.html?property=stocks4')">
             <h1 >Stock 1</h1>
             <p> High</p>
             <p> Low </p>
@@ -79,8 +79,8 @@
 
     <div class="tile">
         <div style="display: none" onclick="close_settings(4)" class="exit_button">x</div>
-        <iframe style="display: none" class="frame" src="settings.html" frameborder="0"></iframe>
-        <div class="queue_vanish" onclick="open_settings(4)">
+        <iframe style="display: none" class="frame"  frameborder="0"></iframe>
+        <div class="queue_vanish" onclick="open_settings(4,'settings.html?property=stocks5')">
             <h1 >Stock 1</h1>
             <p> High</p>
             <p> Low </p>
@@ -92,8 +92,8 @@
 
     <div class="tile">
         <div style="display: none" onclick="close_settings(5)" class="exit_button">x</div>
-        <iframe style="display: none" class="frame" src="settings.html" frameborder="0"></iframe>
-        <div class="queue_vanish" onclick="open_settings(5)">
+        <iframe style="display: none" class="frame" frameborder="0"></iframe>
+        <div class="queue_vanish" onclick="open_settings(5,'settings.html?property=stocks6')">
             <h1 >Stock 1</h1>
             <p> High</p>
             <p> Low </p>
