backend compatibility additions

--- a/index.html
+++ b/index.html
@@ -47,21 +47,21 @@
 <div class="smaller_menu_block" id="fade_up1">
 
     <div class = inner_menu>
-        <h1 id="inner_home_button">WELCOME</h1>
+        <h1 id="inner_home_button">HACKISU 2017 INFO REP</h1>
     </div>
     <span>
         <span class="blinky5s">♦</span>
-            <span class="blinky4s">♥</span>
+            <span class="blinky1s">♥</span>
                 <span class="blinky3s">♦</span>
-                    <span class="blinky2s">♥</span>
+                    <span class="blinky1s">♥</span>
                         <span class="blinkyhalfs">♦</span>
                             <span class="blinky1s">♥</span>
                                 <span class="blinky5s">chris</span>
                             <span class="blinky1s">♥</span>
                         <span class="blinkyhalfs">♦</span>
-                    <span class="blinky2s">♥</span>
+                    <span class="blinky1s">♥</span>
                 <span class="blinky3s">♦</span>
-            <span class="blinky4s">♥</span>
+            <span class="blinky1s">♥</span>
         <span class="blinky5s">♦</span>
     </span>
 </div>
