--- a/settings.html
+++ b/settings.html
@@ -11,7 +11,7 @@
 
 <div class="settings_option">
     stocks1
-    <form action="/apply_settings.php" method="post">
+    <form action="/apply_settings.php?id=0" method="post">
         <input type="text" name="entry?">
         </input>
     </form>
@@ -19,7 +19,7 @@
 
 <div class="settings_option">
     stocks2
-    <form action="/apply_settings.php" method="post">
+    <form action="/apply_settings.php?id=1" method="post">
         <input type="text" name="entry?">
         </input>
     </form>
@@ -27,7 +27,7 @@
 
 <div class="settings_option">
     stocks3
-    <form action="/apply_settings.php" method="post">
+    <form action="/apply_settings.php?id=2" method="post">
         <input type="text" name="entry?">
         </input>
     </form>
@@ -35,21 +35,21 @@
 
 <div class="settings_option">
     stocks4
-    <form action="/apply_settings.php" method="post">
+    <form action="/apply_settings.php?id=3" method="post">
         <input type="text" name="entry?">
         </input>
     </form>
 </div>
 <div class="settings_option">
     stocks5
-    <form action="/apply_settings.php" method="post">
+    <form action="/apply_settings.php?id=4" method="post">
         <input type="text" name="entry?">
         </input>
     </form>
 </div>
 <div class="settings_option">
     stocks6
-    <form action="/apply_settings.php" method="post">
+    <form action="/apply_settings.php?id=5" method="post">
         <input type="text" name="entry?">
         </input>
     </form>
@@ -59,7 +59,7 @@
 
 <div class="settings_option">
     weather1
-    <form action="/apply_settings.php" method="post">
+    <form action="/apply_settings.php?id=0" method="post">
         <input type="text" name="entry?">
         </input>
     </form>
@@ -67,7 +67,7 @@
 
 <div class="settings_option">
     weather2
-    <form action="/apply_settings.php" method="post">
+    <form action="/apply_settings.php?id=1" method="post">
         <input type="text" name="entry?">
         </input>
     </form>
@@ -75,7 +75,7 @@
 
 <div class="settings_option">
     weather3
-    <form action="/apply_settings.php" method="post">
+    <form action="/apply_settings.php?id=2" method="post">
         <input type="text" name="entry?">
         </input>
     </form>
@@ -83,21 +83,21 @@
 
 <div class="settings_option">
     weather4
-    <form action="/apply_settings.php" method="post">
+    <form action="/apply_settings.php?id=3" method="post">
         <input type="text" name="entry?">
         </input>
     </form>
 </div>
 <div class="settings_option">
     weather5
-    <form action="/apply_settings.php" method="post">
+    <form action="/apply_settings.php?id=4" method="post">
         <input type="text" name="entry?">
         </input>
     </form>
 </div>
 <div class="settings_option">
     weather6
-    <form action="/apply_settings.php" method="post">
+    <form action="/apply_settings.php?id=5" method="post">
         <input type="text" name="entry?">
         </input>
     </form>
