almost last commit, more visual tweaks and added support for php interpreting

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 
 <div id="about_info" onclick="close_about()">
     <div class="blog_element" onclick="close_about()">
-        <h1>About</h1>
-        <a>4 ISU Undergraduates are working toward
+        <h1 >About</h1>
+        <a>As it stands, the stock page is the only fully functional page. It is able to cache away currency exchange data and update upon refresh.
+            The rest of the pages will only display default information, as replicating caching on several API's and doing the calls all at once proves to be time consuming. 4 ISU Undergraduates are working toward
             representing and storing information in a full-stack esque setup to prevent redundant api calls, keeping everything stored away to be freely called until all
             api's are queued to be updated. Info Rep was a project originally oriented around the Django framework.
             PHP was transitioned to as the management and seamless implementation with HTML was valued due to hackathon time constraints.  </a>
@@ -25,10 +26,10 @@
 
 <div id="devs_info" onclick="close_devs()">
     <div class="blog_element" onclick="close_devs()"><h1>Developer Information</h1>
-        <h2>bescobar</h2><a>front-end dev who learned javascript because he has to. interests reside in biology, unix, and keyboards</a>
-        <h2>moody</h2><a>backend dev obsessed with overcomplicating everything if he gets to do it in a terminal he customized</a>
-        <h2>dj lou chris</h2><a>front-end dev whos the best rapper in mass</a>
-        <h2>yash mayne</h2><a>indian broo, interests reside in politics</a>
+        <h2>Ben</h2><a>Front-end developer handling javascript and website layout. Interests reside in unix, biology, and keyboards.</a>
+        <h2>Moody</h2><a>Back-end developer with an aptitude for information assurance and traditional computing</a>
+        <h2>Lou Chris</h2><a>Jack-of-all trades with professional experience working back-end and offering heavy support to both front-end developers</a>
+        <h2>Yash</h2><a>Front-end developer focused on finite tweaks to the site's appearance</a>
     </div>
 </div>
 
@@ -36,8 +37,8 @@
     <a href="javascript:void(0)" class="side_close" onclick="close_menu()">&times;</a>
     <a href="index.html">about / home</a>
     <a href="https://github.com/sinfulspartan/Hackathon--InfoRep">github</a>
-    <a href="weather.html">weather</a>
-    <a href="stocks.html">stocks</a>
+    <a href="weather.php">weather</a>
+    <a href="stocks.php">stocks</a>
 </div>
 
 <span style="font-size:45px;cursor:pointer" onclick="open_menu()">★</span>
@@ -48,6 +49,7 @@
 
     <div class = inner_menu>
         <h1 id="inner_home_button">HACKISU 2017 INFO REP</h1>
+        <img src="no_one_is_real"></img>
     </div>
     <span>
         <span class="blinky5s">♦</span>
