Final SideBar commit

--- a/index.html
+++ b/index.html
@@ -25,11 +25,28 @@
 </div>
 
 <div id="devs_info" onclick="close_devs()">
-    <div class="blog_element" onclick="close_devs()"><h1>Developer Information</h1>
-        <h2>Ben</h2><a>Front-end developer handling javascript and website layout. Interests reside in unix, biology, and keyboards.</a>
-        <h2>Moody</h2><a>Back-end developer with an aptitude for information assurance and traditional computing</a>
-        <h2>Lou Chris</h2><a>Jack-of-all trades with professional experience working back-end and offering heavy support to both front-end developers</a>
-        <h2>Yash</h2><a>Front-end developer focused on finite tweaks to the site's appearance</a>
+     <a href="javascript:void(0)" class="side_close" onclick="close_menu()">&times;</a>
+     <a href="index.html">
+        <img src="home-icon.png" width="30px" height="30px">
+        Home
+    </a>
+    <a href="weather.html">
+        <img src="weather-icon.png" width="30px" height="30px">
+        Weather
+    </a>
+    <a href="stocks.html">
+        <img src="stocks-icon.png" width="30px" height="30px">
+        Stocks
+    </a>
+    <div style="position: relative; margin-left: 0.5%; top: 40%;">
+        <a href="https://github.com/sinfulspartan/Hackathon--InfoRep" target="_blank" class="popup" style="font-size: 17px">
+            <img src="chris.png" width="30px" height="30px">
+            Git
+        </a>
+        <a href="chris.com" target="_blank" class="popup" style="font-size: 17px">
+            <img src="Twitter-icon.png" width="30px" height="30px">
+            Twitter
+        </a>
     </div>
 </div>
 
