php file changes for weather and stock

--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
         <img src="home-icon.png" width="30px" height="30px">
         Home
     </a>
-    <a href="weather.html">
+    <a href="weather.php">
         <img src="weather-icon.png" width="30px" height="30px">
         Weather
     </a>
-    <a href="stocks.html">
+    <a href="stocks.php">
         <img src="stocks-icon.png" width="30px" height="30px">
         Stocks
     </a>
