--- a/index.html
+++ b/index.html
@@ -1,23 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <script type="text/javascript" src="index_jscript.js"></script>
-    <link rel="stylesheet" type="text/css" href="index_stylesheet.css">
-    <meta charset="UTF-8">
-    <title>b-esc: wokstar★</title>
-    <style>
-    </style>
-</head>
-<body onload="loading_page()" style="background-color: #f1eee9">
-<div id="loading_overlay">
-<div id="loading_bar"></div>
-</div>
-
-<div id="about_info" onclick="close_about()">
-    <div class="blog_element" onclick="close_about()">
-        <h1 >About</h1>
-        <a>As it stands, the stock page is the only fully functional page. It is able to cache away currency exchange data and update upon refresh.
-            The rest of the pages will only display default information, as replicating caching on several API's and doing the calls all at once proves to be time consuming. 4 ISU Undergraduates are working toward
+doing the calls all at once proves to be time consuming. 4 ISU Undergraduates are working toward
             representing and storing information in a full-stack esque setup to prevent redundant api calls, keeping everything stored away to be freely called until all
             api's are queued to be updated. Info Rep was a project originally oriented around the Django framework.
             PHP was transitioned to as the management and seamless implementation with HTML was valued due to hackathon time constraints.  </a>
@@ -25,8 +6,17 @@
 </div>
 
 <div id="devs_info" onclick="close_devs()">
-     <a href="javascript:void(0)" class="side_close" onclick="close_menu()">&times;</a>
-     <a href="index.html">
+    <div class="blog_element" onclick="close_devs()"><h1>Developer Information</h1>
+        <h2>Ben</h2><a>Front-end developer handling javascript and website layout. Interests reside in unix, biology, and keyboards.</a>
+        <h2>Moody</h2><a>Back-end developer with an aptitude for information assurance and traditional computing</a>
+        <h2>Lou Chris</h2><a>Jack-of-all trades with professional experience working back-end and offering heavy support to both front-end developers</a>
+        <h2>Yash</h2><a>Front-end developer focused on finite tweaks to the site's appearance</a>
+    </div>
+</div>
+
+<div id="m_side_menu" class="side_menu">
+    <a href="javascript:void(0)" class="side_close" onclick="close_menu()">&times;</a>
+    <a href="index.html">
         <img src="home-icon.png" width="30px" height="30px">
         Home
     </a>
@@ -50,14 +40,6 @@
     </div>
 </div>
 
-<div id="m_side_menu" class="side_menu">
-    <a href="javascript:void(0)" class="side_close" onclick="close_menu()">&times;</a>
-    <a href="index.html">about / home</a>
-    <a href="https://github.com/sinfulspartan/Hackathon--InfoRep">github</a>
-    <a href="weather.php">weather</a>
-    <a href="stocks.php">stocks</a>
-</div>
-
 <span style="font-size:45px;cursor:pointer" onclick="open_menu()">★</span>
 
 
@@ -69,19 +51,19 @@
         <img src="no_one_is_real"></img>
     </div>
     <span>
-        <span class="blinky5s">♦</span>
-            <span class="blinky1s">♥</span>
-                <span class="blinky3s">♦</span>
-                    <span class="blinky1s">♥</span>
-                        <span class="blinkyhalfs">♦</span>
-                            <span class="blinky1s">♥</span>
+        <span class="blinky5s">♦️</span>
+            <span class="blinky1s">♥️</span>
+                <span class="blinky3s">♦️</span>
+                    <span class="blinky1s">♥️</span>
+                        <span class="blinkyhalfs">♦️</span>
+                            <span class="blinky1s">♥️</span>
                                 <span class="blinky5s">chris</span>
-                            <span class="blinky1s">♥</span>
-                        <span class="blinkyhalfs">♦</span>
-                    <span class="blinky1s">♥</span>
-                <span class="blinky3s">♦</span>
-            <span class="blinky1s">♥</span>
-        <span class="blinky5s">♦</span>
+                            <span class="blinky1s">♥️</span>
+                        <span class="blinkyhalfs">♦️</span>
+                    <span class="blinky1s">♥️</span>
+                <span class="blinky3s">♦️</span>
+            <span class="blinky1s">♥️</span>
+        <span class="blinky5s">♦️</span>
     </span>
 </div>
 
