--- a/index.html
+++ b/index.html
@@ -1,4 +1,23 @@
-doing the calls all at once proves to be time consuming. 4 ISU Undergraduates are working toward
+<!DOCTYPE html>
+<html>
+<head>
+    <script type="text/javascript" src="index_jscript.js"></script>
+    <link rel="stylesheet" type="text/css" href="index_stylesheet.css">
+    <meta charset="UTF-8">
+    <title>b-esc: wokstar★</title>
+    <style>
+    </style>
+</head>
+<body onload="loading_page()" style="background-color: #f1eee9">
+<div id="loading_overlay">
+<div id="loading_bar"></div>
+</div>
+
+<div id="about_info" onclick="close_about()">
+    <div class="blog_element" onclick="close_about()">
+        <h1 >About</h1>
+        <a>As it stands, the stock page is the only fully functional page. It is able to cache away currency exchange data and update upon refresh.
+            The rest of the pages will only display default information, as replicating caching on several API's and doing the calls all at once proves to be time consuming. 4 ISU Undergraduates are working toward
             representing and storing information in a full-stack esque setup to prevent redundant api calls, keeping everything stored away to be freely called until all
             api's are queued to be updated. Info Rep was a project originally oriented around the Django framework.
             PHP was transitioned to as the management and seamless implementation with HTML was valued due to hackathon time constraints.  </a>
@@ -15,8 +34,8 @@ doing the calls all at once proves to be time consuming. 4 ISU Undergraduates ar
 </div>
 
 <div id="m_side_menu" class="side_menu">
-    <a href="javascript:void(0)" class="side_close" onclick="close_menu()">&times;</a>
-    <a href="index.html">
+     <a href="javascript:void(0)" class="side_close" onclick="close_menu()">&times;</a>
+     <a href="index.html">
         <img src="home-icon.png" width="30px" height="30px">
         Home
     </a>
